add: service popup.service.ts, service confirm-dialog.service.ts, css animations for popups, update, delete methods on ratings, updating service for ratings
updated: SecurityConfig to allow options request, auth service to add userId in jwt token